--- a/src/index.css
+++ b/src/index.css
@@ -10,9 +10,9 @@ input[type="number"]::-webkit-outer-spin-button {
   margin: 0;
 }
 
-body {
+/* body {
   background-color: #fbf7d2;
-}
+} */
 
 #root {
   padding: 0;
