--- a/src/index.css
+++ b/src/index.css
@@ -10,9 +10,9 @@ input[type="number"]::-webkit-outer-spin-button {
   margin: 0;
 }
 
-/* body {
-  background-color: #fbf7d2;
-} */
+body {
+  background-color: rgb(249 250 251);
+}
 
 #root {
   padding: 0;
